libs/extractor/tests/snapshots/all_tests__extract_conditional_style_props-2.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box margin={a === b ? c : d} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 0,
                identifier: "c",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 0,
                identifier: "d",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"a\" style={{ \"--b\": a === b ? c : d }} />;\n",
}
